--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2460,7 +2460,7 @@ position: relative;
 
 
 .devicer {
-  width: 40em;
+  width: 50%;
   height: 1.5px;
   background-color: #A7C7E7;
   margin: 30px auto 0;
