--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1934,7 +1934,7 @@ margin-left:60px;
 .custom-btn {
   width: 200px;
   height: 50px;
-  color: #fff !important;
+  color: #000 !important;
   font-weight: 500 !important;
   border-radius: 30px;
   font-family: 'Raleway', sans-serif;
