--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1920,7 +1920,7 @@ margin-left:60px;
   border: 2px solid #b2d8d8;
 }
 .btn-2:hover {
-   background: rgb(115,194,251); /*rgb(102,153,204); /* rgb(0,3,255); */
+   background: rgb(0, 0, 139); /*rgb(102,153,204); /* rgb(0,3,255); */
    color: #fff !important;
    border: 2px solid #004c4c !important;
    box-shadow: 0 0 5px #004c4c;
@@ -1934,7 +1934,7 @@ margin-left:60px;
 .custom-btn {
   width: 200px;
   height: 50px;
-  color: #000 !important;
+  color: #fff !important;
   font-weight: 500 !important;
   border-radius: 30px;
   font-family: 'Raleway', sans-serif;
@@ -1945,16 +1945,16 @@ margin-left:60px;
   display: inline-block;
   outline: none;
   margin-top:50px;
-  box-shadow: 0 0 2.5px #b2d8d8;
--moz-box-shadow: 0 0 2.5px #b2d8d8;
--webkit-box-shadow: 0 0 2.5px #b2d8d8;
--o-box-shadow: 0 0 2.5px #b2d8d8  /*#004687 */;
+  box-shadow: 0 0 2.5px rgb(31, 81, 255);
+-moz-box-shadow: 0 0 2.5px rgb(31, 81, 255);
+-webkit-box-shadow: 0 0 2.5px rgb(31, 81, 255);
+-o-box-shadow: 0 0 2.5px rgb(31, 81, 255)  /*#004687 */;
 }
 
 /* 1 */
 .btn-1 {
-  background: rgb(102,153,204) ; /* rgb(6,14,131); */
-  border: 2px solid rgb(102,153,204);
+  background: rgb(31, 81, 255) ; /* rgb(6,14,131); */
+  border: 2px solid rgb(31, 81, 255);
 }
 .btn-1:hover {
    background:#004687; /* rgb(0,3,255); */
