--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,10 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   color: #272829;
+  width:100% !important;
+  height:100% !important;
 }
 
 a {
@@ -32,7 +34,7 @@ p{
 {
   font-size:16px;
   line-height: 25px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   font-weight:500;
 }
 
@@ -40,7 +42,7 @@ p{
 {
   font-size:26px !important;
   line-height: 40px !important;
-  font-family: "Raleway", sans-serif !important;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   color:#000 !important;
 }
 
@@ -49,7 +51,7 @@ p{
   font-size:36px !important;
   line-height: 40px !important;
   color:#000 !important;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 .paragraph6
@@ -58,7 +60,7 @@ p{
   line-height: auto !important;
   font-weight:700 !important;
   color:#000 !important;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 
@@ -66,11 +68,11 @@ p{
 {
   font-size:20px;
   line-height: 25px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 /*--------------------------------------------------------------
@@ -317,7 +319,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 56px;
   color: #000;
   margin-bottom:15px;
-  font-family: "Raleway", sans-serif !important;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 #hero h2 {
@@ -326,14 +328,14 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 56px;
   color: #000;
   margin-bottom:15px;
-  font-family: "Raleway", sans-serif !important;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 #hero p {
   color: #fff;
   margin: 30px 0 0 0;
   font-size: 26px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 #hero p span {
