--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,13 +26,13 @@ a:hover {
 
 p{
 
-    font-family: "Raleway", sans-serif;
+    font-family: "Quicksand", sans-serif;
 
 }
 
 .paragraph2
 {
-  font-size:16px;
+  font-size:18px;
   line-height: 25px;
   font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   font-weight:500;
@@ -42,7 +42,7 @@ p{
 {
   font-size:26px !important;
   line-height: 40px !important;
-  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   color:#000 !important;
 }
 
@@ -51,7 +51,7 @@ p{
   font-size:36px !important;
   line-height: 40px !important;
   color:#000 !important;
-  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
 .paragraph6
@@ -68,7 +68,15 @@ p{
 {
   font-size:20px;
   line-height: 25px;
-  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+  font-family: "Quicksand", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+}
+
+.headers
+{
+  color: #333333;
+  font-family: "Lexend Deca", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+  
+  
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -1664,6 +1672,15 @@ display:flex;
 margin:auto;
 }
 
+.avatar21
+{
+width:30%;
+align-content:center;
+display:flex;
+margin:auto;
+padding-top:10px;
+}
+
 .tabspacing
 {
 	padding-left:3em;
@@ -1955,14 +1972,15 @@ margin-left:60px;
 
 /* 1 */
 .btn-1 {
-  background: rgb(31, 81, 255) ; /* rgb(6,14,131); */
-  border: 2px solid rgb(31, 81, 255);
+  background: #004687; /*rgb(31, 81, 255) ; /* rgb(6,14,131); */
+  border: 2px solid #004687; /*rgb(11, 81, 255); */
 }
 .btn-1:hover {
-   background:#004687; /* rgb(0,3,255); */
-   color: #fff !important;
+   background:#a7c7e7; /* rgb(0,3,255); */
+   color: #333333 !important;
    border: 2px solid #004687 !important;
    box-shadow: 0 0 5px #000;
+   font-weight: 500 !important;
  -moz-box-shadow: 0 0 5px #000;
  -webkit-box-shadow: 0 0 5px #000;
  -o-box-shadow: 0 0 5px #000;
@@ -1982,7 +2000,7 @@ margin-left:60px;
 
 .textbackground2
 {
-  color:  #C70039 /* #a16e83  /*1F51FF  ;  #FFD700; */
+  color : #ce2029; /* #a16e83  /*1F51FF  ;  #FFD700; */
 }
 
 .textbackground3
@@ -2115,7 +2133,7 @@ mark{
 
 .containerblue
 {
-  background-color:#f7f7f7;
+  background-color: #fbfbf2;
 }
 
 
